--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "faker": "^4.1.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -38,9 +39,6 @@
     "react": "^16.5.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-form": "^7.4.2",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
